--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 nav {
   font-family: "Fredoka", sans-serif;
   font-optical-sizing: auto;
@@ -60,6 +61,7 @@ html {
 
 body {
 background-color: rgb(14, 14, 14);
+  z-index:-1;
 }
 
 main {
